--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
-#app-container{
+:root{
     background-color: #f5f0e1;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
 }
+
