--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,15 @@
     line-height: 1.5;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+  
+main {
+    flex: 1;
+    width: 100%;
+}
